--- a/registration/login.html
+++ b/registration/login.html
@@ -8,7 +8,7 @@
   <body>
     <div class="box">
       <h2>Login</h2>
-      <form>
+      <form action="" method="post">
         <div class="inputbox">
           <input type="email" name="" value="">
           <label>Email</label>
