--- a/main.html
+++ b/main.html
@@ -38,6 +38,10 @@
                         </div>
                     </div>
                 </div>
+                <div class="text">
+                    <h1> name</h1>
+                </div>
+            
             </div>
 
 
